# zettel-spark-flow

./: DESIGN.md  HANDOFF_SUMMARY_2026-04-19.md  MEMORY.md  README.md  TO_DO.md  VIBO_LEAP_PLUGIN_REFERENCE.md  VIBO_ROADMAP (2).md  codex.md  index.html  package-lock.json  package.json  userrequest.md  vite.config.ts
.lovable/: plan.md
Guidelines/: CRITICAL CONFLICTS: User Memories vs. Phase 0 Mandate.md  README.md  claudepush.md
Guidelines/agents/: AGENT_A_RUST_AUDIT.md  AGENT_B_FRONTEND_AUDIT.md  AGENT_C_YAML_TEST.md  READY_FOR_HANDOFF.md
Guidelines/archive/: E2E_VERIFICATION_STEPS.md  GATE_0_AUDIT_2026-04-08.md  INDEX.md  PHASE_0_MANDATE_AUDIT.md  PHASE_0_MANDATE_AUDIT_root_dupe.md  PHASE_0_TASKS.md  README.md  README_MAP_2026-04-08.md  test_orphan_cleanup.rs
Guidelines/archive/2026-04-07-doc-drift/: FILE_STRUCTURE_SUMMARY.md  P0_COMPLETION_MEMO.md  PHASE_0_TO_PHASE_1_TRANSITION.md
Guidelines/archive/audits-2026-04-08/: 2026-04-07_NEXT_PHASE_AUDIT.md  2026-04-08_BUILD_VERIFICATION_CHECKLIST.md  2026-04-08_CLAUDE_CODE_HANDOVER.md  2026-04-08_COPILOT_SYNC_REVIEW.md  2026-04-08_ONBOARDING_AUDIT_PLAN.md  LOCALCOWORK_MEMO.md  P1_CRITICALS_IMPLEMENTATION.md  P1_EVENT_PROGRESS_MEMO_2026-04-07.md
Guidelines/audits/: 2026-04-07_ONBOARDING_LOCK_FLOW_MEMO.md  2026-04-08_BUILD_REGRESSION_MEMO.md  AUDIT_2026-04-07.md  AUDIT_LOG.md  CORE_APP_GATE_PASSED_2026-04-08.md  FRONTEND_LOCALSTORAGE_AUDIT.md  P0_05_STRONGHOLD_MEMO.md  P0_DEVICE_AWARE_BUILD_2026-04-07.md  P0_P1_2026-04-07_HARDENING_EVENTS_MEMO.md  P0_RUNTIME_AUDIT.md  P1_CRITICALS_QA_RESULT.md  TASK_FOR_CLAUDE_CODE.md
Guidelines/current-phase/: DORMANT_FEATURES_INVENTORY.md  ENGINEER_SYNC.md  P0_STORAGE_ARCHITECTURE.md  PHASE_0_6_BACKLOG.md  PHASE_0_7_BACKLOG.md  PHASE_0_CONFLICTS.md  PHASE_0_EXECUTION_BOARD.md  PHASE_0_FINAL_AUDIT.md  PHASE_0_MANDATE_AUDIT.md  PHASE_0_REMAINING.md  PHASE_0_RESTART_PLAN.md  PHASE_0_SMOKE_TESTS.md  PHASE_0_STRATEGY.md  PHASE_1_ACTIVATION_CHECKLIST.md  PHASE_1_EXECUTION_BOARD.md  PHASE_1_STRATEGY.md  PHASE_2_STRATEGY.md  PHASE_3_STRATEGY.md  PHASE_4_STRATEGY.md
Guidelines/decisions/: FOLDER_ARCHITECTURE.md  STORAGE_ARCHITECTURE_UPDATE.md
Guidelines/memory/: feedback_workflow.md  project_killed_decisions.md  project_models.md  project_open_items.md  project_phase0.md  project_pipelines.md  project_primitives.md  project_stack.md  project_storage.md  user_role.md
Guidelines/source-of-truth/: ARCHITECTURE_RULES.md  CONSOLIDATION_2026-04-26.md  DEAD_CODE_REPORT_2026-04-28.md  PHASE_0.7-B_PLAN_2026-04-28.md  PHASE_0_COMPLETION.md  PHASE_1_INFERENCE_PLAN.md  ROADMAP_MAP_1.md  SOURCES.md  VISION_RESEARCH_2026-04-30.md  data_galvanizer.md  project_cto_decisions_cloud.md
docs/: leap-ai-cross-device-research.md
scripts/: PHASE0_RESULTS.md  PHASE0_TEST_RESULTS.md  dev-prelaunch.sh  qa_lifecycle.py  qa_p0_tail.py  smoke_tests.py  test_obsidian_compat.py  test_task_format.py  test_wiki_links.py
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: inference.rs  mod.rs  onboarding.rs  workspace.rs
src-tauri/src/config/: features.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/models/: manager.rs  manifest.rs  mod.rs
src-tauri/src/plugins/: ACTIVE.md  PLANNED.md  README.md  autostart-plugin.md  dialog-plugin.md  fs-plugin.md  os-plugin.md  sql-plugin.md  stronghold-plugin.md
src-tauri/src/plugins/active/: autostart.md  clipboard.md  dialog.md  fs.md  haptics.md  leap-ai.md  llama-cpp.md  log.md  os.md  shortcuts.md  sql.md  stronghold.md
src-tauri/src/plugins/planned/: leap_ai.md  velesdb.md
src-tauri/src/providers/: mod.rs
src-tauri/src/security/: biometric.rs  mod.rs
src-tauri/src/services/: context.rs  inference.rs  llama.rs  llama_config.rs  mod.rs  model_catalog.rs  retrieval.rs
src-tauri/src/swiftide-agent/: 01_query.md
src-tauri/src/swiftide-pipeline/: 01_index.md  02_chunks.md  03_chunksmarkdown.md  04_ast_treesitter_chunks.md  05_semantic.md  06_sql_velesbd.md
src-tauri/src/templates/myspace/models/: lfm2.5-1.2b-instruct.md  lfm2.5-1.2b-thinking.md  lfm2.5-350m.md  lfm2.5-vl-450m.md
src-tauri/src/templates/myspace/roles/: junior-role.md  specialist-role.md
src-tauri/src/templates/myspace/skills/: index-skill.md  junior-skill.md  specialist-skill.md  tools-index-skill.md
src-tauri/src/vault/: frontmatter.rs  mod.rs  reconcile.rs  seeds.rs
src/components/: AgentsView.tsx  AppSidebar.tsx  BottomNav.tsx  ChatAssistant.tsx  DashboardView.tsx  KanbanView.tsx  KnowledgeGraph.tsx  LockScreen.tsx  NewNoteDialog.tsx  NoteEditor.tsx  NotebookView.tsx  OnboardingWizard.tsx  SettingsView.tsx  SprintCalendar.tsx
src/components/settings/: BiometricsSection.tsx  CloudProvidersSection.tsx  LocalModelsSection.tsx  ResetOnboardingSection.tsx  ResetPassSection.tsx  SafeVaultResetSection.tsx
src/components/ui/: scroll-area.tsx
src/lib/: commands.ts  constants.ts  crypto.ts  inference.ts  lfm.ts  models.ts  store.tsx  types.ts  vaultPhase.ts  wiki-links.ts
src/pages/: Index.tsx
src/test/: persistence.test.ts
