[package]
name = "app"
version = "0.1.0"
description = "VIBO AI - Zettelkasten"
authors = ["cristianovb"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.83" # 🚀 Aqui está a atualização do Rust para a IA funcionar!

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
serde_json = "1.0"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.3"
iota_stronghold = "2.1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tauri = { version = "2.0.0-rc.17", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

# ── Plugins Oficiais ──
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] } # 🚀 O SQLite está ativado!
tauri-plugin-fs = "2"
tauri-plugin-stronghold = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2.0.0-beta.0"

# ── IA, RAG e Semântica ── (Phase 1-3)
# tauri-plugin-leap-ai enabled 2026-04-24 after API research confirmed:
# - Tauri 2.10.3 compatible (plugin requires >=2.10.0)
# - LeapAiExt trait gives Rust-side direct access via app.leap_ai().xxx()
# - Desktop uses llama.cpp in-process (desktop-embedded-llama feature)
# - Mobile uses LEAP vendor SDKs (default backend) — DEFERRED (see task M)
# See: Guidelines/source-of-truth/leap-ai-cross-device-research.md
# tauri-plugin-velesdb = "1.12.0"
# swiftide = "0.32.1"
# swiftide-agents = "0.32.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-leap-ai = { version = "0.1.1", features = ["desktop-embedded-llama"] }
# T12 (Path A): in-process inference via llama-cpp-2 directly. Cargo dedupes
# with the version pinned by tauri-plugin-leap-ai (0.1.x), so a single copy
# of llama.cpp links. Plugin remains for downloads/cache only.
llama-cpp-2 = "0.1"
minijinja = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2.0.0-rc"
# Mobile: re-enable after task M (mobile research + SDK linking).
# tauri-plugin-leap-ai = { version = "0.1.1" }

# ── Dev profile: optimize crypto crates so vault operations aren't painfully slow ──
[profile.dev.package.iota_stronghold]
opt-level = 2
[profile.dev.package.stronghold_engine]
opt-level = 2
[profile.dev.package.stronghold-runtime]
opt-level = 2
[profile.dev.package.aes-gcm]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.aes]
opt-level = 3
[profile.dev.package.cipher]
opt-level = 3
